--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/copa.css">
-	<title>Copa</title>
+	<link rel="stylesheet" href="css/campo.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+	<title>Brasil - Rumo ao Hexa!</title>
 </head>
 <body>
-	<div class="campo">
+	<div class="banner">
+	<h1 class="banner-title">rumo ao hexa!</h1>
+	</div>
+	<div class="scene">
+		<div class="grass"></div>
 		<div class="gd area left"></div>
 		<div class="sm area left"></div>
 		<div class="gol area left"></div>
@@ -16,6 +24,7 @@
 		<div class="corner left down"></div>
 
 		<div class="sides-separator"></div>
+		<div class="ball"></div>
 
 		<div class="gd area right"></div>
 		<div class="sm area right"></div>
@@ -24,5 +33,6 @@
 		<div class="corner right up"></div>
 		<div class="corner right down"></div>
 	</div>
+	<div class="hologram"></div>
 </body>
 </html>
